--- a/2D-ClothSim/2D-ClothSim.vcxproj
+++ b/2D-ClothSim/2D-ClothSim.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{c0db25d4-aaa5-4d97-b4e6-fbcd9e16aa2e}</ProjectGuid>
     <RootNamespace>PhysSim</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>2D-ClothSim</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -133,14 +134,14 @@
     <ClCompile Include="ClothPoint.cpp" />
     <ClCompile Include="ClothStick.cpp" />
     <ClCompile Include="Mouse.cpp" />
-    <ClCompile Include="PhysSimMain.cpp" />
+    <ClCompile Include="ClothSimMain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cloth.h" />
     <ClInclude Include="ClothPoint.h" />
     <ClInclude Include="ClothStick.h" />
     <ClInclude Include="Mouse.h" />
-    <ClInclude Include="PhysSimMain.h" />
+    <ClInclude Include="ClothSimMain.h" />
     <ClInclude Include="Play.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
